stip language on json

--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -205,7 +205,7 @@
                                                 </div>
                                                 <div class="client-checkout-header-right">
                                                     <p v-if="numCountsStipulated > 0"><span><i
-                                                        class="fas fa-handshake"></i>&nbsp;</span>This symbol indicates that we prepared a "stipulated" petition for the listed count, which means that both parties agree to the petition. If the State's Attorney signs the petition, they have agreed (or stipulated) to it. Just because a petition is stipulated does not always mean that the Court will grant an expungement or sealing request.
+                                                        class="fas fa-handshake"></i>&nbsp;</span><span v-html="stipDef"></span>
                                                     </p>
                                                 </div>  
                                             </div>
