replaced photos and 'fixed' issue where I could not re-add docket after clear all due to docketData on payload.js already being declared.

--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -38,13 +38,13 @@
         <div id="logoDivCover">
           <img
             id="code4btv"
-            src="http://www.codeforbtv.org/sites/default/files/code-for-btv-blue_300.png"
+            src="./images/code4BTV-logo-300-300.png"
             alt="Home"
             class="logos"
           />
           <img
             id="legal-aid"
-            src="https://www.vtlegalaid.org/sites/default/files/VLA_logo-200-97px.png"
+            src="./images/VLA_logo-200-97px.png"
             alt="Home"
             class="logos"
           />
@@ -122,12 +122,12 @@
               Clear All
             </button>
             <img
-              src="http://www.codeforbtv.org/sites/default/files/code-for-btv-blue_300.png"
+              src="./images/code4BTV-logo-300-300.png"
               alt="Home"
               class="logos"
             />
             <img
-              src="https://www.vtlegalaid.org/sites/default/files/VLA_logo-200-97px.png"
+              src="./images/VLA_logo-200-97px.png"
               alt="Home"
               class="logos"
             />
