adjust groupCounts to default to false and not save

--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -149,7 +149,7 @@
             <div class="header-bar__controls">
               <label v-if="numDockets > 1"
                 >Consolidate Petitions
-                <input type="checkbox" v-model="settings.groupCounts" />
+                <input type="checkbox" v-model="groupCounts" />
               </label>
               <button
                 v-on:click="printDocument"
