--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -69,6 +69,16 @@
           id="vtCourtsOnlineA"
           class="title-page__link"
           target="_blank"
+          href="https://publicportal.courts.vt.gov/Portal"
+        >
+          <p id="vtCourtsOnline">
+            <b>Vermont Judiciary Public Portal <i class="fas fa-external-link-alt"></i></b>
+          </p>
+        </a>
+        <a
+          id="vtCourtsOnlineA"
+          class="title-page__link"
+          target="_blank"
           href="https://secure.vermont.gov/vtcdas/user"
         >
           <p id="vtCourtsOnline">
@@ -76,10 +86,9 @@
           </p>
         </a>
         <a target="_blank" href="disclaimer.html" class="title-page__link">
-          <p style="padding-bottom: 30px;">
-            <b
-              >Terms &amp; Conditions <i class="fas fa-external-link-alt"></i
-            ></b>
+          <p style="padding-bottom: 20px;">
+            Terms &amp; Conditions <i class="fas fa-external-link-alt"></i
+            >
           </p>
         </a>
       </div>
