LINK: comments & formatting

--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -87,8 +87,7 @@
         </a>
         <a target="_blank" href="disclaimer.html" class="title-page__link">
           <p style="padding-bottom: 20px;">
-            Terms &amp; Conditions <i class="fas fa-external-link-alt"></i
-            >
+            Terms &amp; Conditions <i class="fas fa-external-link-alt"></i>
           </p>
         </a>
       </div>
@@ -177,8 +176,8 @@
                   <div id="description-date" class="card-header__meta-data">
                     <div class="card-header__description btn btn-link btn-sm">
                       <p v-if="count.docketNum">
-                        <b
-                          ><a v-bind:href="count.url" target="_blank">
+                        <b>
+                          <a v-bind:href="count.url" target="_blank">
                             {{count.docketNum}} {{count.county | toCountyCode
                             }}</a
                           ></b
