NOAs: insert NOA before each petition using a new docket

--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -155,6 +155,7 @@
                 <input type="checkbox" v-model="groupCounts" />
                 Petitions
               </label>
+              <!-- TODO: can you consoliate NoA without Petitions? Or the other way around? May need logic to handle an overriding case... -->
               <label v-if="numDockets > 1">
                 <input type="checkbox" v-model="groupNoas"/>
                 NoA
