--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -156,10 +156,10 @@
                 Petitions
               </label>
               <!-- TODO: can you consoliate NoA without Petitions? Or the other way around? May need logic to handle an overriding case... -->
-              <label v-if="numDockets > 1">
+              <!-- <label v-if="numDockets > 1">
                 <input type="checkbox" v-model="groupNoas"/>
                 NoA
-              </label>
+              </label> -->
               <button
                 v-on:click="printDocument"
                 class="btn btn-primary no-print"
