--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -1044,7 +1044,7 @@
                     </template>
                     <template v-if="filing.type == 'NoA'">
                         <div class="filing-closing">
-                            <filing-dated-city></filing-dated-city>
+                            <filing-dated-city v-if="!proSeFromRole(settings.role)"></filing-dated-city>
                             <div class="filing-closing__signature-area filing-closing--align-right">
                                 <div class="filing-closing__signature-box">
                                     <template v-if="proSeFromRole(settings.role)">
@@ -1069,6 +1069,9 @@
                                             <p class=  "filing-closing__petitioner-address" v-html="nl2br(settings['attorney']+'\n'+settings['attorneyAddress']+'\n'+settings['attorneyPhone'])"></p>
                                         </div>
                                     </template>
+                                </div>
+                                <div v-if="proSeFromRole(settings.role)" class="filing-closing__date-area-prose">
+                                  Date
                                 </div>
                             </div>
                     </template>
