GA4: first stab
Set up a data stream in GA (https://analytics.google.com/analytics/web/#/a185775328p256722298/admin/streams/table/). Unfortunately, it looks like the extension's Content Security Policy
in the manifest.json is blocking the extension from fetching GA files.

Begin troubleshooting by running ExpungeVT on this branch and opening
the inspector on the petitions "print" page. You will see the blocked
request in the network tab when you reload the page.

--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -30,6 +30,20 @@
 
     <!-- Moment -->
     <script src="./node_modules/moment/min/moment.min.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-C66LK49RVB"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'G-C66LK49RVB');
+    </script>
   </head>
 
   <body>
