WIP: a big, messy, half-finished pile

--- a/extensionDirectory/src/disclaimer.html
+++ b/extensionDirectory/src/disclaimer.html
@@ -2,14 +2,7 @@
 <html lang="en">
   <head>
     <title>Expunge VT Terms and Conditions</title>
-    <link href="filings.css" rel="stylesheet" type="text/css" />
-
-    <!-- Bootstrap -->
-    <link
-      rel="stylesheet"
-      href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
-    />
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <link href="../css/filings.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body id="disclaimer">
